2003-05-08  Vasco Costa <vasc@rnl.ist.utl.pt>

	* released GreedMud 1.0 GOLD

	* added all areas back from the UltraEnvy distribution.

        * src/update.c: commented out vehicle_update() call. it was
        sucking up 50% of CPU time. if you want vehicles uncomment it again.

2002-02-10  Vasco Costa <vasc@rnl.ist.utl.pt>

	* released GreedMud 0.99.14

	* added new dictionary tables.
	  Patch by Aioros.

	* fixed languages bug.

	* minor fixups.

2002-02-09  Vasco Costa <vasc@rnl.ist.utl.pt>

	* released GreedMud 0.99.13

	* fixed name lookup code bug (i hope).

	* src/act_wiz.c: added new immortal command makeimm.
	  Patch by Aioros.

	* src/act_comm.c, act_clan.c, act_comm.c, act_info.c, act_lang.c: new
	language code.
	  Patch by Aioros.

	* src/act_obj.c, src/db.c, src/merc.h, src/bit.c, src/update.c: vehicle
	code added.
	  Patch by Aioros.

	* src/db.c: Win32 time fix.
	  Patch by Aioros.
	
2001-11-18  Vasco Costa <vasc@rnl.ist.utl.pt>

	* released GreedMud 0.99.12

2001-11-18  Vasco Costa <vasc@rnl.ist.utl.pt>

	* src/act_wiz.c: added #ifdef USE_PTHREADS.
	  Bug reported by Bramage.

2001-11-17  Vasco Costa <vasc@rnl.ist.utl.pt>

	* released GreedMud 0.99.11

2001-11-17  Vasco Costa <vasc@rnl.ist.utl.pt>

	* src/mob_comm.c: changed do_mpstat() and removed useless table.

	* src/act_wiz.c: fixed blank skill bug in do_sset().
	  Bug reported by Faustus.

	* src/bit.c: removed weird entry in size_flags[].
	  Bug reported by Sardon.

	* src/interp.c, sys/SOCIALS.TXT: punch kill.
	  Patch by MistBlade.

	* src/tables.c: changed fread_social().

	* src/comm.c, src/merc.h, src/act_wiz.c: new name lookup code. 
	basically there should be no more server freezes when using 
	problematic name servers or with problematic client machine names.
	on systems with POSIX Threads support a per-player thread is spawned
	to lookup the user and host name. all other systems get the client
	machine's IP as information.